feat: auth service endpoints
