# spec/api.yaml
@@ -31,7 +31,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
 
-  /user/auth/otp-verify/signup:
+  /user/auth/signup/otp-verify:
     post:
       summary: 'Signup : verify otp-request'
       tags:
@@ -235,6 +235,56 @@ paths:
         401:
           $ref: '#/components/schemas/ErrorResponse'
 
+  /user/auth/resend-device-otp:
+    post:
+      summary: 'resend verify deviceId otp'
+      tags:
+        - authentication
+      operationId: verifyDeviceOtp
+      parameters:
+        - $ref: '#/components/parameters/DeviceID'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SignupOtpRequest'
+      responses:
+        200:
+          description: 'success'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DefaultResponse'
+        400:
+          description: 'error'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
+
+  /user/auth/logout:
+    post:
+      summary: 'endpoint to log users out'
+      tags:
+        - authentication
+      parameters:
+        - $ref: '#/components/parameters/AuthToken'
+      responses:
+        200:
+          description: 'Successfully logged out'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DefaultResponse'
+        403:
+          description: 'error'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
+
 
 
 
@@ -306,13 +356,17 @@ components:
         email:
           type: string
         otp:
-          type: string
+          type: number
 
     SignupRequest:
       type: object
       properties:
         fullName:
           type: string
+        password:
+          type: string
+          format: password
+          pattern: '^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$'
 
 
     GoogleAuthRequest:
@@ -333,8 +387,7 @@ components:
           type: string
           format: password
           pattern: '^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$'
-        role:
-          type: string
+
 
     VerifyDeviceIDRequest:
       type: object
