# src/interfaces/user/auth.requests.ts
@@ -1,4 +1,4 @@
-export interface SignupOtpRequest{
+export interface OtpRequest{
     email: string;
     device: string;
 }
@@ -7,4 +7,30 @@ export interface VerifyOtpRequest{
     email:string;
     device:string;
     otp:number
+    trustDevice?:boolean;
+}
+
+
+export interface resendOtp{
+    email:string;
+    device:string;
+}
+
+export interface SaveSignup{
+    email:string;
+    password:string;
+    fullName:string;
+    device:string;
+}
+
+export interface ResetPassword{
+    password:string;
+    email:string;
+    device:string;
+}
+
+export interface LoginRequest {
+    email: string;
+    password: string;
+    deviceId: string
 }
